# BigInteger

./: .clang-format  .gitignore  BigInteger.cpp  BigInteger.hpp  BigIntegerCore.cpp  CMakeLists.txt  README  README.md  format.sh  test.cpp
include/: BigInteger.hpp  BigIntegerTest.hpp
include/BigInteger/: BigInteger.hpp  BigIntegerTest.hpp
src/: BigInteger.cpp  BigIntegerCore.cpp  Magnitude.cpp
test/: CMakeLists.txt  addsub.cpp  compare.cpp  constructor.cpp  div.cpp  logic.cpp  mul.cpp  shift.cpp  test.cpp  toString.cpp
